2 - header section and additional configuration

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="scss/_main.scss"/>
 </head>
 <body>
+<header class="header container">
+    <div class="logo">
+        <a href="#">Loans.com</a>
+    </div>
+    <nav class="list">
+        <ul class="navi">
+            <li class="list__item"><a href="#" class="link">Rates & Fees</a></li>
+            <li class="list__item"><a href="#" class="link">How to apply</a></li>
+            <li class="list__item"><a href="#" class="link">Questions?</a></li>
+        </ul>
+    </nav>
+</header>
 
 </body>
 </html>
